--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "nodejs"
   },
   "repository": {
@@ -21,7 +22,10 @@
   },
   "homepage": "https://github.com/winhandsome309/nodejs_project#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "morgan": "^1.10.0",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
